added infra launch

--- a/welcomepage/web/stack.css
+++ b/welcomepage/web/stack.css
@@ -15,7 +15,7 @@ html, body {
     padding-top:2%;
 }
 
-#mainsection { 
+#mainsection {
     height:400px;
     margin-top:40px;
 }
@@ -55,8 +55,8 @@ html, body {
     text-align: center;
 }
 
-a:link { 
-    text-decoration:none; 
+a:link {
+    text-decoration:none;
     color:black;
 }
 
@@ -80,4 +80,52 @@ a:link {
 
 #section3:hover {
     background-color:#0081bc;
+}
+a:link {
+    color: black;
+}
+#loader {
+  position: absolute;
+  left: 63%;
+  top: 52%;
+  z-index: 1;
+  width: 20px;
+  height: 20px;
+  margin: -75px 0 0 -75px;
+  border: 10px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 10px solid #3498db;
+  width: 30px;
+  height: 30px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+/* Add animation to "page content" */
+.animate-bottom {
+  position: relative;
+  -webkit-animation-name: animatebottom;
+  -webkit-animation-duration: 1s;
+  animation-name: animatebottom;
+  animation-duration: 1s
+}
+
+@-webkit-keyframes animatebottom {
+  from { bottom:-100px; opacity:0 }
+  to { bottom:0px; opacity:1 }
+}
+
+@keyframes animatebottom {
+  from{ bottom:-100px; opacity:0 }
+  to{ bottom:0; opacity:1 }
 }
